# pulseaudio-modules-droid-glue

./: .tarball-version  configure.ac
debian/: changelog  control  pulseaudio-modules-droid-glue-24.install  pulseaudio-modules-droid-glue-28.install  pulseaudio-modules-droid-glue.install  rules
src/glue/: Makefile.am  module-droid-glue-symdef.h  module-droid-glue.c
